# statsai

./: .firebaserc  .gitignore  Cargo.toml  README.md  dist-workspace.toml  firebase.json  firestore.rules  index.js  package.json
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  release.yml
crates/ai-stats-adapters/: Cargo.toml
crates/ai-stats-adapters/src/: lib.rs
crates/ai-stats-cli/: Cargo.toml
crates/ai-stats-cli/src/: auth.rs  main.rs
crates/ai-stats-core/: Cargo.toml
crates/ai-stats-core/src/: lib.rs
crates/ai-stats-daemon/: Cargo.toml
crates/ai-stats-daemon/src/: lib.rs
crates/ai-stats-pricing/: Cargo.toml
crates/ai-stats-pricing/src/: lib.rs
crates/ai-stats-sdk/: Cargo.toml
crates/ai-stats-sdk/src/: lib.rs
crates/ai-stats-store/: Cargo.toml
crates/ai-stats-store/src/: lib.rs
crates/ai-stats-sync/: Cargo.toml
crates/ai-stats-sync/src/: lib.rs
crates/statsai/: Cargo.toml
crates/statsai-adapters/: Cargo.toml
crates/statsai-adapters/src/: archive.rs  lib.rs
crates/statsai-cli/: Cargo.toml
crates/statsai-cli/src/: auth.rs  main.rs
crates/statsai-core/: Cargo.toml
crates/statsai-core/src/: archive.rs  lib.rs  tasks.rs
crates/statsai-daemon/: Cargo.toml
crates/statsai-daemon/src/: lib.rs
crates/statsai-menubar/: Cargo.toml
crates/statsai-menubar/src/: main.rs
crates/statsai-pricing/: Cargo.toml
crates/statsai-pricing/src/: lib.rs
crates/statsai-privacy/: Cargo.toml
crates/statsai-privacy/src/: dataset.rs  kingfisher.rs  kingfisher_unsupported.rs  lib.rs  mlx.rs  mlx_unsupported.rs  policy.rs
crates/statsai-sdk/: Cargo.toml
crates/statsai-sdk/src/: lib.rs
crates/statsai-store/: Cargo.toml
crates/statsai-store/src/: archive.rs  lib.rs  migrations.rs  privacy.rs  tasks.rs
crates/statsai-sync/: Cargo.toml
crates/statsai-sync/src/: lib.rs
crates/statsai/src/: auth.rs  lib.rs  main.rs  privacy.rs  privacy_cli.rs  service.rs  snapshot.rs
crates/statsai/tests/: conversation_cli.rs  privacy_cli.rs
docs/: conversation-archive.md  sync-contract.md  task-benchmarking.md  task-collection.md
docs/fixtures/: sync_ack.v1.minimal.json  sync_batch.v1.minimal.json
packaging/homebrew-tap/: README.md
packaging/scripts/: build-menubar-app.sh  build-universal-macos.sh
scripts/: install-git-hooks.sh  rust-ci.sh
tools/statsai-kingfisher/: .gitignore  Cargo.toml  README.md  build.sh  kingfisher-fallible-scan.patch  kingfisher-scanner.Cargo.toml  workspace.Cargo.toml
tools/statsai-kingfisher/src/: main.rs
web/login/: index.html
