[workspace]
members = [
  "crates/statsai-core",
  "crates/statsai-adapters",
  "crates/statsai-store",
  "crates/statsai-sync",
  "crates/statsai-daemon",
  "crates/statsai-sdk",
  "crates/statsai",
  "crates/statsai-menubar",
  "crates/statsai-pricing",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/starkdmi/statsai"
authors = ["Dmitry Starkov"]
description = "Local-first AI usage statistics CLI/SDK/daemon"
keywords = ["ai", "cli", "usage", "statistics", "llm"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
statsai-adapters = { path = "crates/statsai-adapters", version = "0.2.0" }
statsai-core = { path = "crates/statsai-core", version = "0.2.0" }
statsai-pricing = { path = "crates/statsai-pricing", version = "0.2.0" }
statsai-daemon = { path = "crates/statsai-daemon", version = "0.2.0" }
statsai-sdk = { path = "crates/statsai-sdk", version = "0.2.0" }
statsai-store = { path = "crates/statsai-store", version = "0.2.0" }
statsai-sync = { path = "crates/statsai-sync", version = "0.2.0" }
statsai = { path = "crates/statsai", version = "0.2.0" }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
hex = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
schemars = { version = "0.8", features = ["chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
thiserror = "1"
tiny_http = "0.12"
walkdir = "2"
notify = "7"
ureq = { version = "2.9", features = ["json"] }
percent-encoding = "2.3"
getrandom = { version = "0.2", features = ["std"] }


[profile.release]
lto = "thin"
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
