[package]
name = "ai-stats-cli"
description = "Command-line interface for ai-stats."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "ai-stats"
path = "src/main.rs"

[dependencies]
ai-stats-adapters = { path = "../ai-stats-adapters" }
ai-stats-core = { path = "../ai-stats-core" }
ai-stats-daemon = { path = "../ai-stats-daemon" }
ai-stats-sdk = { path = "../ai-stats-sdk" }
ai-stats-store = { path = "../ai-stats-store" }
ai-stats-sync = { path = "../ai-stats-sync" }
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
schemars.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
