[package]
name = "ai-stats-core"
description = "Core schemas, IDs, privacy, and dedupe helpers for ai-stats."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
chrono.workspace = true
hex.workspace = true
schemars.workspace = true
serde.workspace = true
sha2.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
