[package]
name = "ai-stats-daemon"
description = "Loopback daemon API for ai-stats."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
ai-stats-adapters = { path = "../ai-stats-adapters" }
ai-stats-core = { path = "../ai-stats-core" }
ai-stats-store = { path = "../ai-stats-store" }
anyhow.workspace = true
chrono.workspace = true
notify = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
tiny_http.workspace = true

[features]
watch = ["dep:notify"]
