[package]
name = "ai-stats-store"
description = "SQLite storage for ai-stats."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
ai-stats-core = { path = "../ai-stats-core" }
anyhow.workspace = true
chrono.workspace = true
rusqlite.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
