[package]
name = "statsai-adapters"
description = "Provider adapters for statsai."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
statsai-core = { path = "../statsai-core" }
statsai-pricing = { path = "../statsai-pricing" }
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
