[package]
name = "statsai-adapters"
description = "Provider adapters for statsai."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
statsai-core.workspace = true
statsai-pricing.workspace = true
anyhow.workspace = true
chrono.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
