[package]
name = "statsai-privacy"
description = "Local privacy detector interfaces and sidecar clients for statsai."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
chrono.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
statsai-core.workspace = true
thiserror.workspace = true
unicode-normalization.workspace = true

[target.'cfg(unix)'.dependencies]
nix.workspace = true
opf-mlx.workspace = true

[dev-dependencies]
tempfile.workspace = true
