[package]
name = "statsai-sdk"
description = "Public Rust SDK facade for statsai."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
statsai-adapters.workspace = true
statsai-core.workspace = true
statsai-store.workspace = true
statsai-sync.workspace = true
anyhow.workspace = true
chrono.workspace = true
schemars.workspace = true
serde.workspace = true
