[package]
name = "statsai-store"
description = "SQLite storage for statsai."
version = "0.1.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
statsai-core.workspace = true
anyhow.workspace = true
chrono.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
