[package]
name = "statsai-sync"
description = "Sync sink traits and local sinks for statsai."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
statsai-core.workspace = true
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
ureq.workspace = true

[dev-dependencies]
tempfile.workspace = true
tiny_http.workspace = true
