[package]
name = "statsai"
description = "Local-first AI usage statistics CLI for macOS."
homepage = "https://statsai.dev"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.dist]
dist = true
formula = "statsai"
display-name = "statsai"

# For crates.io releases, plain `cargo binstall statsai` resolves the published
# crate version and downloads the matching GitHub release archive.
[package.metadata.binstall]
pkg-url = "https://github.com/starkdmi/statsai/releases/download/v{version}/statsai-{target}.tar.xz"
pkg-fmt = "txz"
bin-dir = "statsai-{target}/"

[lib]
name = "statsai"
path = "src/lib.rs"

[[bin]]
name = "statsai"
path = "src/main.rs"

[dependencies]
statsai-adapters.workspace = true
statsai-core.workspace = true
statsai-daemon = { workspace = true, features = ["watch"] }
statsai-sdk.workspace = true
statsai-store.workspace = true
statsai-sync.workspace = true
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
ureq.workspace = true
tiny_http.workspace = true
percent-encoding.workspace = true
getrandom.workspace = true
hex.workspace = true
keyring = { version = "3.6", features = ["apple-native", "windows-native", "sync-secret-service"] }

[dev-dependencies]
tempfile.workspace = true
